--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^13.0.1",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
+    "google-auth-library": "^7.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7"
   }
